# ebnfparser

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-and-test.yaml  build-and-test.yml
data/: ebnf_gql_variant.txt  gqlgrammar.quotedliterals.txt
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  ebnf_ast.gtest.cpp  ebnf_ast.h
src/ebnf_convert/: CMakeLists.txt  ebnf_convert.cpp  ebnf_convert.gtest.cpp  ebnf_convert.h
src/ebnftobison/grammar/: ebnftobison.bison.y
src/flexbison.gen/: CMakeLists.txt  ebnf_lexer.flex.cpp  ebnf_parser.bison.h
src/grammar/: CMakeLists.txt  ebnf_grammar_report.txt  ebnf_lexer.flex.l  ebnf_parser.bison.y  ebnf_parser.rules.bison.y
src/lexer/: CMakeLists.txt  ebnf_lexer.gtest.cpp  ebnf_lexer.h  ebnf_lexer_guard.h
src/parser/: CMakeLists.txt  ebnf_parser.cpp  ebnf_parser.gtest.cpp
src/parser_api/: CMakeLists.txt  ebnf_parse.h
src/wasm/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: patch_getopt.ps1
